# claudy

./: Cargo.toml  DESIGN.md
.github/workflows/: ci.yml
docs/: architecture.excalidraw
src/: app.rs  main.rs  message.rs  session.rs  ui.rs  watcher.rs
