[package]
name = "claudy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
notify = "7"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
